C90->RISC-V_Compiler/build/parser.output
Terminals unused in grammar

    CONST
    VOLATILE
    UNION
    ELLIPSIS
    UNKNOWN


State 37 conflicts: 20 reduce/reduce
State 153 conflicts: 20 reduce/reduce
State 241 conflicts: 20 reduce/reduce
State 325 conflicts: 1 shift/reduce


Grammar

    0 $accept: ROOT $end

    1 ROOT: translation_unit

    2 translation_unit: external_declaration
    3                 | translation_unit external_declaration

    4 external_declaration: function_definition
    5                     | declaration
    6                     | enum_definition

    7 function_definition: declaration_specifiers declarator declaration_list compound_statement
    8                    | declaration_specifiers declarator compound_statement
    9                    | declarator declaration_list compound_statement
   10                    | declarator compound_statement

   11 primary_expression: IDENTIFIER
   12                   | INT_CONSTANT
   13                   | FLOAT_CONSTANT
   14                   | STRING_LITERAL
   15                   | '(' expression ')'

   16 postfix_expression: primary_expression
   17                   | postfix_expression '[' expression ']'
   18                   | postfix_expression '(' ')'
   19                   | postfix_expression '(' argument_expression_list ')'
   20                   | postfix_expression '.' IDENTIFIER
   21                   | postfix_expression PTR_OP IDENTIFIER
   22                   | postfix_expression INC_OP
   23                   | postfix_expression DEC_OP

   24 argument_expression_list: assignment_expression
   25                         | argument_expression_list ',' assignment_expression

   26 unary_expression: postfix_expression
   27                 | INC_OP unary_expression
   28                 | DEC_OP unary_expression
   29                 | unary_operator cast_expression
   30                 | SIZEOF unary_expression
   31                 | SIZEOF '(' type_name ')'

   32 unary_operator: '&'
   33               | '*'
   34               | '+'
   35               | '-'
   36               | '~'
   37               | '!'

   38 cast_expression: unary_expression
   39                | '(' type_name ')' cast_expression

   40 multiplicative_expression: cast_expression
   41                          | multiplicative_expression '*' cast_expression
   42                          | multiplicative_expression '/' cast_expression
   43                          | multiplicative_expression '%' cast_expression

   44 additive_expression: multiplicative_expression
   45                    | additive_expression '+' multiplicative_expression
   46                    | additive_expression '-' multiplicative_expression

   47 shift_expression: additive_expression
   48                 | shift_expression LEFT_OP additive_expression
   49                 | shift_expression RIGHT_OP additive_expression

   50 relational_expression: shift_expression
   51                      | relational_expression '<' shift_expression
   52                      | relational_expression '>' shift_expression
   53                      | relational_expression LE_OP shift_expression
   54                      | relational_expression GE_OP shift_expression

   55 equality_expression: relational_expression
   56                    | equality_expression EQ_OP relational_expression
   57                    | equality_expression NE_OP relational_expression

   58 and_expression: equality_expression
   59               | and_expression '&' equality_expression

   60 exclusive_or_expression: and_expression
   61                        | exclusive_or_expression '^' and_expression

   62 inclusive_or_expression: exclusive_or_expression
   63                        | inclusive_or_expression '|' exclusive_or_expression

   64 logical_and_expression: inclusive_or_expression
   65                       | logical_and_expression AND_OP inclusive_or_expression

   66 logical_or_expression: logical_and_expression
   67                      | logical_or_expression OR_OP logical_and_expression

   68 conditional_expression: logical_or_expression
   69                       | logical_or_expression '?' expression ':' conditional_expression

   70 assignment_expression: conditional_expression
   71                      | unary_expression assignment_operator assignment_expression

   72 assignment_operator: '='
   73                    | MUL_ASSIGN
   74                    | DIV_ASSIGN
   75                    | MOD_ASSIGN
   76                    | ADD_ASSIGN
   77                    | SUB_ASSIGN
   78                    | LEFT_ASSIGN
   79                    | RIGHT_ASSIGN
   80                    | AND_ASSIGN
   81                    | XOR_ASSIGN
   82                    | OR_ASSIGN

   83 expression: assignment_expression
   84           | expression ',' assignment_expression

   85 constant_expression: conditional_expression

   86 declaration: declaration_specifiers ';'
   87            | declaration_specifiers init_declarator_list ';'

   88 declaration_specifiers: storage_class_specifier
   89                       | storage_class_specifier declaration_specifiers
   90                       | type_specifier
   91                       | type_specifier declaration_specifiers

   92 init_declarator_list: init_declarator

   93 init_declarator: declarator
   94                | declarator '=' initializer

   95 storage_class_specifier: TYPEDEF
   96                        | EXTERN
   97                        | STATIC
   98                        | AUTO
   99                        | REGISTER

  100 type_specifier: VOID
  101               | CHAR
  102               | SHORT
  103               | INT
  104               | LONG
  105               | FLOAT
  106               | DOUBLE
  107               | SIGNED
  108               | UNSIGNED
  109               | struct_specifier
  110               | enum_specifier
  111               | TYPE_NAME

  112 struct_specifier: STRUCT IDENTIFIER '{' struct_declaration_list '}'
  113                 | STRUCT '{' struct_declaration_list '}'
  114                 | STRUCT IDENTIFIER

  115 struct_declaration_list: struct_declaration
  116                        | struct_declaration_list struct_declaration

  117 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

  118 specifier_qualifier_list: type_specifier specifier_qualifier_list
  119                         | type_specifier

  120 struct_declarator_list: struct_declarator
  121                       | struct_declarator_list ',' struct_declarator

  122 struct_declarator: declarator
  123                  | ':' constant_expression
  124                  | declarator ':' constant_expression

  125 enum_definition: ENUM '{' enumerator_list '}'
  126                | ENUM IDENTIFIER '{' enumerator_list '}'
  127                | ENUM IDENTIFIER

  128 enum_specifier: ENUM '{' enumerator_list '}'
  129               | ENUM IDENTIFIER '{' enumerator_list '}'
  130               | ENUM IDENTIFIER

  131 enumerator_list: enumerator
  132                | enumerator_list ',' enumerator

  133 enumerator: IDENTIFIER
  134           | IDENTIFIER '=' constant_expression

  135 declarator: pointer direct_declarator
  136           | direct_declarator

  137 direct_declarator: IDENTIFIER
  138                  | '(' declarator ')'
  139                  | direct_declarator '[' constant_expression ']'
  140                  | direct_declarator '[' ']'
  141                  | direct_declarator '(' parameter_list ')'
  142                  | direct_declarator '(' identifier_list ')'
  143                  | direct_declarator '(' ')'

  144 pointer: '*'
  145        | '*' pointer

  146 parameter_list: parameter_declaration
  147               | parameter_list ',' parameter_declaration

  148 parameter_declaration: declaration_specifiers declarator
  149                      | declaration_specifiers abstract_declarator
  150                      | declaration_specifiers

  151 identifier_list: IDENTIFIER
  152                | identifier_list ',' IDENTIFIER

  153 type_name: specifier_qualifier_list

  154 abstract_declarator: pointer
  155                    | direct_abstract_declarator
  156                    | pointer direct_abstract_declarator

  157 direct_abstract_declarator: '(' abstract_declarator ')'
  158                           | '[' ']'
  159                           | '[' constant_expression ']'
  160                           | direct_abstract_declarator '[' ']'
  161                           | direct_abstract_declarator '[' constant_expression ']'
  162                           | '(' ')'
  163                           | '(' parameter_list ')'
  164                           | direct_abstract_declarator '(' ')'
  165                           | direct_abstract_declarator '(' parameter_list ')'

  166 initializer: assignment_expression
  167            | '{' initializer_list '}'
  168            | '{' initializer_list ',' '}'

  169 initializer_list: initializer
  170                 | initializer_list ',' initializer

  171 statement: labeled_statement
  172          | compound_statement
  173          | expression_statement
  174          | selection_statement
  175          | iteration_statement
  176          | jump_statement

  177 labeled_statement: IDENTIFIER ':' statement
  178                  | CASE constant_expression ':' statement
  179                  | DEFAULT ':' statement

  180 compound_statement: '{' '}'
  181                   | '{' statement_list '}'
  182                   | '{' declaration_list '}'
  183                   | '{' declaration_list statement_list '}'

  184 declaration_list: declaration
  185                 | declaration_list declaration

  186 statement_list: statement
  187               | statement_list statement

  188 expression_statement: ';'
  189                     | expression ';'

  190 selection_statement: IF '(' expression ')' statement
  191                    | IF '(' expression ')' statement ELSE statement
  192                    | SWITCH '(' expression ')' statement

  193 iteration_statement: WHILE '(' expression ')' statement
  194                    | DO statement WHILE '(' expression ')' ';'
  195                    | FOR '(' expression_statement expression_statement ')' statement
  196                    | FOR '(' expression_statement expression_statement expression ')' statement

  197 jump_statement: GOTO IDENTIFIER ';'
  198               | CONTINUE ';'
  199               | BREAK ';'
  200               | RETURN ';'
  201               | RETURN expression ';'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 37
    '%' (37) 43
    '&' (38) 32 59
    '(' (40) 15 18 19 31 39 138 141 142 143 157 162 163 164 165 190 191 192 193 194 195 196
    ')' (41) 15 18 19 31 39 138 141 142 143 157 162 163 164 165 190 191 192 193 194 195 196
    '*' (42) 33 41 144 145
    '+' (43) 34 45
    ',' (44) 25 84 121 132 147 152 168 170
    '-' (45) 35 46
    '.' (46) 20
    '/' (47) 42
    ':' (58) 69 123 124 177 178 179
    ';' (59) 86 87 117 188 189 194 197 198 199 200 201
    '<' (60) 51
    '=' (61) 72 94 134
    '>' (62) 52
    '?' (63) 69
    '[' (91) 17 139 140 158 159 160 161
    ']' (93) 17 139 140 158 159 160 161
    '^' (94) 61
    '{' (123) 112 113 125 126 128 129 167 168 180 181 182 183
    '|' (124) 63
    '}' (125) 112 113 125 126 128 129 167 168 180 181 182 183
    '~' (126) 36
    error (256)
    IDENTIFIER <string> (258) 11 20 21 112 114 126 127 129 130 133 134 137 151 152 177 197
    INT_CONSTANT <number_int> (259) 12
    FLOAT_CONSTANT <number_float> (260) 13
    STRING_LITERAL <string> (261) 14
    PTR_OP (262) 21
    INC_OP (263) 22 27
    DEC_OP (264) 23 28
    LEFT_OP (265) 48
    RIGHT_OP (266) 49
    LE_OP (267) 53
    GE_OP (268) 54
    EQ_OP (269) 56
    NE_OP (270) 57
    AND_OP (271) 65
    OR_OP (272) 67
    MUL_ASSIGN (273) 73
    DIV_ASSIGN (274) 74
    MOD_ASSIGN (275) 75
    ADD_ASSIGN (276) 76
    SUB_ASSIGN (277) 77
    LEFT_ASSIGN (278) 78
    RIGHT_ASSIGN (279) 79
    AND_ASSIGN (280) 80
    XOR_ASSIGN (281) 81
    OR_ASSIGN (282) 82
    TYPE_NAME (283) 111
    TYPEDEF (284) 95
    EXTERN (285) 96
    STATIC (286) 97
    AUTO (287) 98
    REGISTER (288) 99
    SIZEOF (289) 30 31
    CHAR (290) 101
    SHORT (291) 102
    INT (292) 103
    LONG (293) 104
    SIGNED (294) 107
    UNSIGNED (295) 108
    FLOAT (296) 105
    DOUBLE (297) 106
    CONST (298)
    VOLATILE (299)
    VOID (300) 100
    STRUCT (301) 112 113 114
    UNION (302)
    ENUM (303) 125 126 127 128 129 130
    ELLIPSIS (304)
    CASE (305) 178
    DEFAULT (306) 179
    IF (307) 190 191
    ELSE (308) 191
    SWITCH (309) 192
    WHILE (310) 193 194
    DO (311) 194
    FOR (312) 195 196
    GOTO (313) 197
    CONTINUE (314) 198
    BREAK (315) 199
    RETURN (316) 200 201
    UNKNOWN (317)


Nonterminals, with rules where they appear

    $accept (87)
        on left: 0
    ROOT (88)
        on left: 1
        on right: 0
    translation_unit <node_list> (89)
        on left: 2 3
        on right: 1 3
    external_declaration <node> (90)
        on left: 4 5 6
        on right: 2 3
    function_definition <node> (91)
        on left: 7 8 9 10
        on right: 4
    primary_expression <node> (92)
        on left: 11 12 13 14 15
        on right: 16
    postfix_expression <node> (93)
        on left: 16 17 18 19 20 21 22 23
        on right: 17 18 19 20 21 22 23 26
    argument_expression_list <node_list> (94)
        on left: 24 25
        on right: 19 25
    unary_expression <node> (95)
        on left: 26 27 28 29 30 31
        on right: 27 28 30 38 71
    unary_operator <string> (96)
        on left: 32 33 34 35 36 37
        on right: 29
    cast_expression <node> (97)
        on left: 38 39
        on right: 29 39 40 41 42 43
    multiplicative_expression <node> (98)
        on left: 40 41 42 43
        on right: 41 42 43 44 45 46
    additive_expression <node> (99)
        on left: 44 45 46
        on right: 45 46 47 48 49
    shift_expression <node> (100)
        on left: 47 48 49
        on right: 48 49 50 51 52 53 54
    relational_expression <node> (101)
        on left: 50 51 52 53 54
        on right: 51 52 53 54 55 56 57
    equality_expression <node> (102)
        on left: 55 56 57
        on right: 56 57 58 59
    and_expression <node> (103)
        on left: 58 59
        on right: 59 60 61
    exclusive_or_expression <node> (104)
        on left: 60 61
        on right: 61 62 63
    inclusive_or_expression <node> (105)
        on left: 62 63
        on right: 63 64 65
    logical_and_expression <node> (106)
        on left: 64 65
        on right: 65 66 67
    logical_or_expression <node> (107)
        on left: 66 67
        on right: 67 68 69
    conditional_expression <node> (108)
        on left: 68 69
        on right: 69 70 85
    assignment_expression <node> (109)
        on left: 70 71
        on right: 24 25 71 83 84 166
    assignment_operator <string> (110)
        on left: 72 73 74 75 76 77 78 79 80 81 82
        on right: 71
    expression <node> (111)
        on left: 83 84
        on right: 15 17 69 84 189 190 191 192 193 194 196 201
    constant_expression <node> (112)
        on left: 85
        on right: 123 124 134 139 159 161 178
    declaration <node> (113)
        on left: 86 87
        on right: 5 184 185
    declaration_specifiers <type_specifier> (114)
        on left: 88 89 90 91
        on right: 7 8 86 87 89 91 148 149 150
    init_declarator_list <node> (115)
        on left: 92
        on right: 87
    init_declarator <node> (116)
        on left: 93 94
        on right: 92
    storage_class_specifier <string> (117)
        on left: 95 96 97 98 99
        on right: 88 89
    type_specifier <type_specifier> (118)
        on left: 100 101 102 103 104 105 106 107 108 109 110 111
        on right: 90 91 118 119
    struct_specifier <node> (119)
        on left: 112 113 114
        on right: 109
    struct_declaration_list <node> (120)
        on left: 115 116
        on right: 112 113 116
    struct_declaration <node> (121)
        on left: 117
        on right: 115 116
    specifier_qualifier_list <type_specifier> (122)
        on left: 118 119
        on right: 117 118 153
    struct_declarator_list <node> (123)
        on left: 120 121
        on right: 117 121
    struct_declarator <node> (124)
        on left: 122 123 124
        on right: 120 121
    enum_definition <node> (125)
        on left: 125 126 127
        on right: 6
    enum_specifier <type_specifier> (126)
        on left: 128 129 130
        on right: 110
    enumerator_list <node_list> (127)
        on left: 131 132
        on right: 125 126 128 129 132
    enumerator <node> (128)
        on left: 133 134
        on right: 131 132
    declarator <node> (129)
        on left: 135 136
        on right: 7 8 9 10 93 94 122 124 138 148
    direct_declarator <node> (130)
        on left: 137 138 139 140 141 142 143
        on right: 135 136 139 140 141 142 143
    pointer <node> (131)
        on left: 144 145
        on right: 135 145 154 156
    parameter_list <node_list> (132)
        on left: 146 147
        on right: 141 147 163 165
    parameter_declaration <node> (133)
        on left: 148 149 150
        on right: 146 147
    identifier_list <node> (134)
        on left: 151 152
        on right: 142 152
    type_name <type_specifier> (135)
        on left: 153
        on right: 31 39
    abstract_declarator <node> (136)
        on left: 154 155 156
        on right: 149 157
    direct_abstract_declarator <node> (137)
        on left: 157 158 159 160 161 162 163 164 165
        on right: 155 156 160 161 164 165
    initializer <node> (138)
        on left: 166 167 168
        on right: 94 169 170
    initializer_list <node> (139)
        on left: 169 170
        on right: 167 168 170
    statement <node> (140)
        on left: 171 172 173 174 175 176
        on right: 177 178 179 186 187 190 191 192 193 194 195 196
    labeled_statement <node> (141)
        on left: 177 178 179
        on right: 171
    compound_statement <node> (142)
        on left: 180 181 182 183
        on right: 7 8 9 10 172
    declaration_list <node_list> (143)
        on left: 184 185
        on right: 7 9 182 183 185
    statement_list <node_list> (144)
        on left: 186 187
        on right: 181 183 187
    expression_statement <node> (145)
        on left: 188 189
        on right: 173 195 196
    selection_statement <node> (146)
        on left: 190 191 192
        on right: 174
    iteration_statement <node> (147)
        on left: 193 194 195 196
        on right: 175
    jump_statement <node> (148)
        on left: 197 198 199 200 201
        on right: 176


State 0

    0 $accept: . ROOT $end

    IDENTIFIER  shift, and go to state 1
    TYPE_NAME   shift, and go to state 2
    TYPEDEF     shift, and go to state 3
    EXTERN      shift, and go to state 4
    STATIC      shift, and go to state 5
    AUTO        shift, and go to state 6
    REGISTER    shift, and go to state 7
    CHAR        shift, and go to state 8
    SHORT       shift, and go to state 9
    INT         shift, and go to state 10
    LONG        shift, and go to state 11
    SIGNED      shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    FLOAT       shift, and go to state 14
    DOUBLE      shift, and go to state 15
    VOID        shift, and go to state 16
    STRUCT      shift, and go to state 17
    ENUM        shift, and go to state 18
    '('         shift, and go to state 19
    '*'         shift, and go to state 20

    ROOT                     go to state 21
    translation_unit         go to state 22
    external_declaration     go to state 23
    function_definition      go to state 24
    declaration              go to state 25
    declaration_specifiers   go to state 26
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    struct_specifier         go to state 29
    enum_definition          go to state 30
    enum_specifier           go to state 31
    declarator               go to state 32
    direct_declarator        go to state 33
    pointer                  go to state 34


State 1

  137 direct_declarator: IDENTIFIER .

    $default  reduce using rule 137 (direct_declarator)


State 2

  111 type_specifier: TYPE_NAME .

    $default  reduce using rule 111 (type_specifier)


State 3

   95 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 95 (storage_class_specifier)


State 4

   96 storage_class_specifier: EXTERN .

    $default  reduce using rule 96 (storage_class_specifier)


State 5

   97 storage_class_specifier: STATIC .

    $default  reduce using rule 97 (storage_class_specifier)


State 6

   98 storage_class_specifier: AUTO .

    $default  reduce using rule 98 (storage_class_specifier)


State 7

   99 storage_class_specifier: REGISTER .

    $default  reduce using rule 99 (storage_class_specifier)


State 8

  101 type_specifier: CHAR .

    $default  reduce using rule 101 (type_specifier)


State 9

  102 type_specifier: SHORT .

    $default  reduce using rule 102 (type_specifier)


State 10

  103 type_specifier: INT .

    $default  reduce using rule 103 (type_specifier)


State 11

  104 type_specifier: LONG .

    $default  reduce using rule 104 (type_specifier)


State 12

  107 type_specifier: SIGNED .

    $default  reduce using rule 107 (type_specifier)


State 13

  108 type_specifier: UNSIGNED .

    $default  reduce using rule 108 (type_specifier)


State 14

  105 type_specifier: FLOAT .

    $default  reduce using rule 105 (type_specifier)


State 15

  106 type_specifier: DOUBLE .

    $default  reduce using rule 106 (type_specifier)


State 16

  100 type_specifier: VOID .

    $default  reduce using rule 100 (type_specifier)


State 17

  112 struct_specifier: STRUCT . IDENTIFIER '{' struct_declaration_list '}'
  113                 | STRUCT . '{' struct_declaration_list '}'
  114                 | STRUCT . IDENTIFIER

    IDENTIFIER  shift, and go to state 35
    '{'         shift, and go to state 36


State 18

  125 enum_definition: ENUM . '{' enumerator_list '}'
  126                | ENUM . IDENTIFIER '{' enumerator_list '}'
  127                | ENUM . IDENTIFIER
  128 enum_specifier: ENUM . '{' enumerator_list '}'
  129               | ENUM . IDENTIFIER '{' enumerator_list '}'
  130               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 37
    '{'         shift, and go to state 38


State 19

  138 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 19
    '*'         shift, and go to state 20

    declarator         go to state 39
    direct_declarator  go to state 33
    pointer            go to state 34


State 20

  144 pointer: '*' .
  145        | '*' . pointer

    '*'  shift, and go to state 20

    $default  reduce using rule 144 (pointer)

    pointer  go to state 40


State 21

    0 $accept: ROOT . $end

    $end  shift, and go to state 41


State 22

    1 ROOT: translation_unit .
    3 translation_unit: translation_unit . external_declaration

    IDENTIFIER  shift, and go to state 1
    TYPE_NAME   shift, and go to state 2
    TYPEDEF     shift, and go to state 3
    EXTERN      shift, and go to state 4
    STATIC      shift, and go to state 5
    AUTO        shift, and go to state 6
    REGISTER    shift, and go to state 7
    CHAR        shift, and go to state 8
    SHORT       shift, and go to state 9
    INT         shift, and go to state 10
    LONG        shift, and go to state 11
    SIGNED      shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    FLOAT       shift, and go to state 14
    DOUBLE      shift, and go to state 15
    VOID        shift, and go to state 16
    STRUCT      shift, and go to state 17
    ENUM        shift, and go to state 18
    '('         shift, and go to state 19
    '*'         shift, and go to state 20

    $default  reduce using rule 1 (ROOT)

    external_declaration     go to state 42
    function_definition      go to state 24
    declaration              go to state 25
    declaration_specifiers   go to state 26
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    struct_specifier         go to state 29
    enum_definition          go to state 30
    enum_specifier           go to state 31
    declarator               go to state 32
    direct_declarator        go to state 33
    pointer                  go to state 34


State 23

    2 translation_unit: external_declaration .

    $default  reduce using rule 2 (translation_unit)


State 24

    4 external_declaration: function_definition .

    $default  reduce using rule 4 (external_declaration)


State 25

    5 external_declaration: declaration .

    $default  reduce using rule 5 (external_declaration)


State 26

    7 function_definition: declaration_specifiers . declarator declaration_list compound_statement
    8                    | declaration_specifiers . declarator compound_statement
   86 declaration: declaration_specifiers . ';'
   87            | declaration_specifiers . init_declarator_list ';'

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 19
    '*'         shift, and go to state 20
    ';'         shift, and go to state 43

    init_declarator_list  go to state 44
    init_declarator       go to state 45
    declarator            go to state 46
    direct_declarator     go to state 33
    pointer               go to state 34


State 27

   88 declaration_specifiers: storage_class_specifier .
   89                       | storage_class_specifier . declaration_specifiers

    TYPE_NAME  shift, and go to state 2
    TYPEDEF    shift, and go to state 3
    EXTERN     shift, and go to state 4
    STATIC     shift, and go to state 5
    AUTO       shift, and go to state 6
    REGISTER   shift, and go to state 7
    CHAR       shift, and go to state 8
    SHORT      shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    FLOAT      shift, and go to state 14
    DOUBLE     shift, and go to state 15
    VOID       shift, and go to state 16
    STRUCT     shift, and go to state 17
    ENUM       shift, and go to state 47

    $default  reduce using rule 88 (declaration_specifiers)

    declaration_specifiers   go to state 48
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    struct_specifier         go to state 29
    enum_specifier           go to state 31


State 28

   90 declaration_specifiers: type_specifier .
   91                       | type_specifier . declaration_specifiers

    TYPE_NAME  shift, and go to state 2
    TYPEDEF    shift, and go to state 3
    EXTERN     shift, and go to state 4
    STATIC     shift, and go to state 5
    AUTO       shift, and go to state 6
    REGISTER   shift, and go to state 7
    CHAR       shift, and go to state 8
    SHORT      shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    FLOAT      shift, and go to state 14
    DOUBLE     shift, and go to state 15
    VOID       shift, and go to state 16
    STRUCT     shift, and go to state 17
    ENUM       shift, and go to state 47

    $default  reduce using rule 90 (declaration_specifiers)

    declaration_specifiers   go to state 49
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    struct_specifier         go to state 29
    enum_specifier           go to state 31


State 29

  109 type_specifier: struct_specifier .

    $default  reduce using rule 109 (type_specifier)


State 30

    6 external_declaration: enum_definition .

    $default  reduce using rule 6 (external_declaration)


State 31

  110 type_specifier: enum_specifier .

    $default  reduce using rule 110 (type_specifier)


State 32

    9 function_definition: declarator . declaration_list compound_statement
   10                    | declarator . compound_statement

    TYPE_NAME  shift, and go to state 2
    TYPEDEF    shift, and go to state 3
    EXTERN     shift, and go to state 4
    STATIC     shift, and go to state 5
    AUTO       shift, and go to state 6
    REGISTER   shift, and go to state 7
    CHAR       shift, and go to state 8
    SHORT      shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    FLOAT      shift, and go to state 14
    DOUBLE     shift, and go to state 15
    VOID       shift, and go to state 16
    STRUCT     shift, and go to state 17
    ENUM       shift, and go to state 47
    '{'        shift, and go to state 50

    declaration              go to state 51
    declaration_specifiers   go to state 52
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    struct_specifier         go to state 29
    enum_specifier           go to state 31
    compound_statement       go to state 53
    declaration_list         go to state 54


State 33

  136 declarator: direct_declarator .
  139 direct_declarator: direct_declarator . '[' constant_expression ']'
  140                  | direct_declarator . '[' ']'
  141                  | direct_declarator . '(' parameter_list ')'
  142                  | direct_declarator . '(' identifier_list ')'
  143                  | direct_declarator . '(' ')'

    '('  shift, and go to state 55
    '['  shift, and go to state 56

    $default  reduce using rule 136 (declarator)


State 34

  135 declarator: pointer . direct_declarator

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 19

    direct_declarator  go to state 57


State 35

  112 struct_specifier: STRUCT IDENTIFIER . '{' struct_declaration_list '}'
  114                 | STRUCT IDENTIFIER .

    '{'  shift, and go to state 58

    $default  reduce using rule 114 (struct_specifier)


State 36

  113 struct_specifier: STRUCT '{' . struct_declaration_list '}'

    TYPE_NAME  shift, and go to state 2
    CHAR       shift, and go to state 8
    SHORT      shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    FLOAT      shift, and go to state 14
    DOUBLE     shift, and go to state 15
    VOID       shift, and go to state 16
    STRUCT     shift, and go to state 17
    ENUM       shift, and go to state 47

    type_specifier            go to state 59
    struct_specifier          go to state 29
    struct_declaration_list   go to state 60
    struct_declaration        go to state 61
    specifier_qualifier_list  go to state 62
    enum_specifier            go to state 31


State 37

  126 enum_definition: ENUM IDENTIFIER . '{' enumerator_list '}'
  127                | ENUM IDENTIFIER .
  129 enum_specifier: ENUM IDENTIFIER . '{' enumerator_list '}'
  130               | ENUM IDENTIFIER .

    '{'  shift, and go to state 63

    IDENTIFIER  reduce using rule 127 (enum_definition)
    IDENTIFIER  [reduce using rule 130 (enum_specifier)]
    TYPE_NAME   reduce using rule 127 (enum_definition)
    TYPE_NAME   [reduce using rule 130 (enum_specifier)]
    TYPEDEF     reduce using rule 127 (enum_definition)
    TYPEDEF     [reduce using rule 130 (enum_specifier)]
    EXTERN      reduce using rule 127 (enum_definition)
    EXTERN      [reduce using rule 130 (enum_specifier)]
    STATIC      reduce using rule 127 (enum_definition)
    STATIC      [reduce using rule 130 (enum_specifier)]
    AUTO        reduce using rule 127 (enum_definition)
    AUTO        [reduce using rule 130 (enum_specifier)]
    REGISTER    reduce using rule 127 (enum_definition)
    REGISTER    [reduce using rule 130 (enum_specifier)]
    CHAR        reduce using rule 127 (enum_definition)
    CHAR        [reduce using rule 130 (enum_specifier)]
    SHORT       reduce using rule 127 (enum_definition)
    SHORT       [reduce using rule 130 (enum_specifier)]
    INT         reduce using rule 127 (enum_definition)
    INT         [reduce using rule 130 (enum_specifier)]
    LONG        reduce using rule 127 (enum_definition)
    LONG        [reduce using rule 130 (enum_specifier)]
    SIGNED      reduce using rule 127 (enum_definition)
    SIGNED      [reduce using rule 130 (enum_specifier)]
    UNSIGNED    reduce using rule 127 (enum_definition)
    UNSIGNED    [reduce using rule 130 (enum_specifier)]
    FLOAT       reduce using rule 127 (enum_definition)
    FLOAT       [reduce using rule 130 (enum_specifier)]
    DOUBLE      reduce using rule 127 (enum_definition)
    DOUBLE      [reduce using rule 130 (enum_specifier)]
    VOID        reduce using rule 127 (enum_definition)
    VOID        [reduce using rule 130 (enum_specifier)]
    STRUCT      reduce using rule 127 (enum_definition)
    STRUCT      [reduce using rule 130 (enum_specifier)]
    ENUM        reduce using rule 127 (enum_definition)
    ENUM        [reduce using rule 130 (enum_specifier)]
    '('         reduce using rule 127 (enum_definition)
    '('         [reduce using rule 130 (enum_specifier)]
    '*'         reduce using rule 127 (enum_definition)
    '*'         [reduce using rule 130 (enum_specifier)]
    ';'         reduce using rule 130 (enum_specifier)
    $default    reduce using rule 127 (enum_definition)


State 38

  125 enum_definition: ENUM '{' . enumerator_list '}'
  128 enum_specifier: ENUM '{' . enumerator_list '}'

    IDENTIFIER  shift, and go to state 64

    enumerator_list  go to state 65
    enumerator       go to state 66


State 39

  138 direct_declarator: '(' declarator . ')'

    ')'  shift, and go to state 67


State 40

  145 pointer: '*' pointer .

    $default  reduce using rule 145 (pointer)


State 41

    0 $accept: ROOT $end .

    $default  accept


State 42

    3 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 3 (translation_unit)


State 43

   86 declaration: declaration_specifiers ';' .

    $default  reduce using rule 86 (declaration)


State 44

   87 declaration: declaration_specifiers init_declarator_list . ';'

    ';'  shift, and go to state 68


State 45

   92 init_declarator_list: init_declarator .

    $default  reduce using rule 92 (init_declarator_list)


State 46

    7 function_definition: declaration_specifiers declarator . declaration_list compound_statement
    8                    | declaration_specifiers declarator . compound_statement
   93 init_declarator: declarator .
   94                | declarator . '=' initializer

    TYPE_NAME  shift, and go to state 2
    TYPEDEF    shift, and go to state 3
    EXTERN     shift, and go to state 4
    STATIC     shift, and go to state 5
    AUTO       shift, and go to state 6
    REGISTER   shift, and go to state 7
    CHAR       shift, and go to state 8
    SHORT      shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    FLOAT      shift, and go to state 14
    DOUBLE     shift, and go to state 15
    VOID       shift, and go to state 16
    STRUCT     shift, and go to state 17
    ENUM       shift, and go to state 47
    '='        shift, and go to state 69
    '{'        shift, and go to state 50

    $default  reduce using rule 93 (init_declarator)

    declaration              go to state 51
    declaration_specifiers   go to state 52
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    struct_specifier         go to state 29
    enum_specifier           go to state 31
    compound_statement       go to state 70
    declaration_list         go to state 71


State 47

  128 enum_specifier: ENUM . '{' enumerator_list '}'
  129               | ENUM . IDENTIFIER '{' enumerator_list '}'
  130               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 72
    '{'         shift, and go to state 73


State 48

   89 declaration_specifiers: storage_class_specifier declaration_specifiers .

    $default  reduce using rule 89 (declaration_specifiers)


State 49

   91 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 91 (declaration_specifiers)


State 50

  180 compound_statement: '{' . '}'
  181                   | '{' . statement_list '}'
  182                   | '{' . declaration_list '}'
  183                   | '{' . declaration_list statement_list '}'
